--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
-  <head> <img src="Images\Image.svg">
-    <title>MeMes</title>
+<img width="300" height="300" src="Images\Image.svg">
+    <title>MeMeS</title>
   </head>
 
   <body> <br><a target="_blank" href="https://www.google.com/search?q=IT+WAS+ME+DIO&client=opera-gx&hs=gx8&sxsrf=ALiCzsYXTCexR9ptkfwWMwZ6cP45qbvqyg:1651791307744&source=lnms&tbm=isch&sa=X&ved=2ahUKEwj9ipCRusn3AhXpuZUCHYCMAt8Q_AUoAXoECAEQAw&cshid=1651791358582727&biw=1319&bih=623&dpr=1#imgrc=FWn8GPRgR0VbVM"> THE TRUTH
