--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
-<img width="300" height="300" src="Images\Iage.svg">
+<img width="300" height="300" src="Images\Image.svg">
     <title>MeMeS</title>
   </head>
 
